--- a/assignments/assignment02.css
+++ b/assignments/assignment02.css
@@ -1,5 +1,21 @@
 /* --- put your css here --- */ 
 
+body{
+   background-color: skyblue;
+}
+  
+#igottabeme{
+   font-family: "Arial", "Helvetica", "sans-serif";
+}
+
+.classy {
+  margin-left: 10px;
+}
+
+div {
+  margin-bottom: 50px;
+}
+
 /* external css is imported into html using the <link> tag in the <head> section, as shown below.
 
   <head>
