--- a/assignments/assignment02.css
+++ b/assignments/assignment02.css
@@ -29,7 +29,7 @@ div {
 Solid Blue 5px border, and a yellow background */
 SPAN {
    width: 100px;
-   height: 50;
+   height: 50px;
    padding: 5px 20px 5px; /* Three values sets this properly, could also be done with 4 */
    border-style: solid;
    border-color: blue;
@@ -48,7 +48,8 @@ SPAN.b {
 }
 
 SPAN.c {
-   
+   word-wrap: break-word;
+   position:absolute;
 }
 
 
