--- a/assignments/assignment02.css
+++ b/assignments/assignment02.css
@@ -64,7 +64,7 @@ span.c {
    z-index: 100; 
 }
 
-img[alt=”dog icon”] {
+img[alt="dog icon"] {
     position: relative;
     left: 50px;
     top: 150px;
@@ -72,7 +72,7 @@ img[alt=”dog icon”] {
    
 }
 
-img[alt=”dog icon”] {
+img[alt="bird icon"] {
    
 }
 
