--- a/assignments/assignment02.css
+++ b/assignments/assignment02.css
@@ -66,14 +66,15 @@ span.c {
 
 img[alt="dog icon"] {
     position: relative;
-    left: 50px;
-    top: 150px;
-    display: block;
-   
+    right: 50px;
+    bottom: 150px; 
 }
 
 img[alt="bird icon"] {
-   
+   position: absolute;
+   z-index: 99; 
+   left: 250px;
+   top: 50px;
 }
 
 
