--- a/assignments/assignment02.css
+++ b/assignments/assignment02.css
@@ -73,8 +73,8 @@ img[alt="dog icon"] {
 img[alt="bird icon"] {
    position: absolute;
    z-index: 99; 
-   left: 250px;
-   top: 50px;
+   right: 250px;
+   bottom: 50px;
 }
 
 
